# DiplomaVT

./: CMakeLists.txt  DevGuide.md  abstractuinodes.h  appcore.cpp  appcore.h  appmessage.h  cachemanager.cpp  cachemanager.h  datamanager.cpp  datamanager.h  devicemanager.h  dynamiclibrary.h  enginemanager.cpp  enginemanager.h  engineregistry.cpp  engineregistry.h  eventmanager.cpp  eventmanager.h  eventqueue.h  fileloader.cpp  fileloader.h  filesaver.h  icacheable.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messageprocessor.cpp  messageprocessor.h  misc.h  model.qmodel  shorts.h  uirenderer.cpp  uirenderer.h
testEng/: core.cpp  core.h  puppetmodel.cpp  puppetmodel.h  rendercontroller.cpp  rendercontroller.h
